--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
         </div>
 
         <div id="num-of-people-div" class="number-of-people__container">
-          <h2>Number of people</h2>
-          <h3 id="error" class="error-menssage">Can't be zero</h3>
+          <div class="num-of-people-header__container">
+            <h2>Number of people</h2>
+            <h3 id="error" class="error-menssage">Can't be zero</h3>
+          </div>
           <img id="img" src="./images/icon-person.svg" />
           <input
             id="num-input"
