--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="card__left-side">
         <div class="bill__container">
           <h2>Bill</h2>
-          <img src="./images/icon-dollar.svg" />
+          <img src="./images/icon-dollar.svg" alt="dollar bill icon" />
           <input
             id="bill-input"
             class="bill-input"
@@ -68,7 +68,7 @@
             <h2>Number of people</h2>
             <h3 id="error" class="error-menssage">Can't be zero</h3>
           </div>
-          <img id="img" src="./images/icon-person.svg" />
+          <img id="img" src="./images/icon-person.svg" alt="user icon" />
           <input
             id="num-input"
             type="number"
